--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:padding="10dp"
-        android:scrollbars="vertical"
+        android:scrollbars="none"
         android:scrollingCache="true">
 
         <LinearLayout
@@ -80,7 +80,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Compte"
+                            android:text="Les Demandes"
                             android:textStyle="bold" />
 
                         <View
@@ -94,7 +94,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:text="Voir les information de votre compte"
+                            android:text="Voir les Demandes"
                             android:textColor="@android:color/darker_gray" />
 
                     </LinearLayout>
@@ -140,7 +140,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:text="Check your bank activities"
+                            android:text="Liste des jours feriés"
                             android:textColor="@android:color/darker_gray" />
 
                     </LinearLayout>
@@ -241,7 +241,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:text="Check your historique activity"
+                            android:text="Voir Votre historique"
                             android:textColor="@android:color/darker_gray" />
 
                     </LinearLayout>
@@ -297,7 +297,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:text="Check your bank activities"
+                            android:text="Consulter la calendrier"
                             android:textColor="@android:color/darker_gray" />
 
                     </LinearLayout>
