--- a/app/src/main/res/layout/historique_list_item.xml
+++ b/app/src/main/res/layout/historique_list_item.xml
@@ -44,7 +44,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/employeename"
+            android:id="@+id/jours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
