--- a/app/src/main/res/layout/item_days_off.xml
+++ b/app/src/main/res/layout/item_days_off.xml
@@ -18,14 +18,6 @@
             android:layout_width="@dimen/spacing_large"
             android:layout_height="0dp" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="@dimen/spacing_large"
-            android:layout_marginBottom="@dimen/spacing_large"
-            android:scaleType="centerCrop" />
-
         <View
             android:layout_width="@dimen/spacing_large"
             android:layout_height="0dp" />
@@ -43,8 +35,8 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
@@ -57,8 +49,8 @@
                         android:textColor="@color/grey_90" />
 
                     <TextView
-                        android:id="@+id/brief"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/date"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:text="Who He Should Be"
