--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -49,13 +49,71 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/account"
+                    android:layout_width="340dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick="handleClick">
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="64dp"
+                            android:layout_height="66dp"
+                            android:background="@drawable/circle_background_blue"
+                            android:padding="10dp"
+                            app:srcCompat="@drawable/ic_account" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="Compte"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_margin="10dp"
+                            android:background="@color/lightgray" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="Consulter Mon Compte"
+                            android:textColor="@android:color/darker_gray" />
+
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/demande"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp"
@@ -74,7 +132,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundpurple"
                             android:padding="10dp"
-                            app:srcCompat="@drawable/ic_attach_money_black_24dp" />
+                            app:srcCompat="@drawable/outline_send_white_18" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -120,7 +178,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundpink"
                             android:padding="10dp"
-                            app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp" />
+                            app:srcCompat="@drawable/outline_work_off_white_48" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -152,13 +210,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
+
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/request"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
+                    android:layout_width="340dp"
+                    android:layout_height="150dp"
                     android:layout_margin="10dp"
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground"
@@ -203,8 +262,8 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/historique"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
+                    android:layout_width="340dp"
+                    android:layout_height="150dp"
                     android:layout_margin="10dp"
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground"
@@ -221,7 +280,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundyello"
                             android:padding="10dp"
-                            app:srcCompat="@drawable/ic_attach_file_black_24dp" />
+                            app:srcCompat="@drawable/ic_history" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -254,7 +313,8 @@
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/calendrier"
@@ -274,10 +334,10 @@
 
                         <ImageView
                             android:layout_width="64dp"
-                            android:layout_height="64dp"
+                            android:layout_height="66dp"
                             android:background="@drawable/cerclebackgroundpurple"
                             android:padding="10dp"
-                            app:srcCompat="@drawable/ic_wifi_black_24dp" />
+                            app:srcCompat="@drawable/ic_today" />
 
                         <TextView
                             android:layout_width="wrap_content"
